[gd_scene load_steps=2 format=3 uid="uid://bp4qiejri1wqm"]

[ext_resource type="Script" path="res://addons/talk_tree/talk_tree.gd" id="1_lbjc0"]

[node name="GraphEdit" type="GraphEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_lbjc0")

[node name="PopupMenu" type="PopupMenu" parent="."]
item_count = 4
item_0/text = "Add Node"
item_1/text = "Export"
item_1/id = 1
item_2/id = -1
item_2/separator = true
item_3/text = "Save"
item_3/id = 2

[node name="Add_Node_Popup_Submenu" type="PopupMenu" parent="PopupMenu"]
size = Vector2i(134, 100)
item_count = 3
item_0/text = "Dialogue"
item_1/text = "Action"
item_1/id = 1
item_2/text = "Condition"
item_2/id = 2

[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="delete_nodes_request" from="." to="." method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnection_request"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_popup_menu_id_pressed"]
[connection signal="id_pressed" from="PopupMenu/Add_Node_Popup_Submenu" to="." method="_on_add_node_popup_submenu_id_pressed"]
